# MagnaChain-dev-master

./: .dockerignore  .gitignore  .travis.yml  CONTRIBUTING.md  COPYING  Dockerfile  INSTALL.md  Makefile.am  README.md  autogen.sh  celllink-msvc.sln  configure.ac  docker-compose.debug.yml  docker-compose.yml  docker-entrypoint.sh  docker_deploy.pl  libcelllinkconsensus.pc.in  libmagnachainconsensus.pc.in  magnachain-msvc.sln
src/: Dockerfile  Makefile.am  Makefile.bench.include  Makefile.leveldb.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  celllink-cli-res.rc  celllink-cli.cpp  celllink-tx-res.rc  celllink-tx.cpp  celllinkd-res.rc  celllinkd.cpp  init.cpp  init.h  magnachain-cli-res.rc  magnachain-cli.cpp  magnachain-monitor.cpp  magnachain-tx-res.rc  magnachain-tx.cpp  magnachaind-monitor.cpp  magnachaind-res.rc  magnachaind.cpp
src/address/: addrdb.cpp  addrdb.h  addrman.cpp  addrman.h
src/bench/: .gitignore  Examples.cpp  base58.cpp  bench.cpp  bench.h  bench_celllink.cpp  bench_magnachain.cpp  ccoins_caching.cpp  checkblock.cpp  checkqueue.cpp  coin_selection.cpp  crypto_hash.cpp  lockedpool.cpp  mempool_eviction.cpp  perf.cpp  perf.h  prevector_destructor.cpp  rollingbloom.cpp  verify_script.cpp
src/chain/: branchchain.cpp  branchchain.h  branchdb.cpp  branchdb.h  branchtxdb.cpp  branchtxdb.h  chain.cpp  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h
src/coding/: arith_uint256.cpp  arith_uint256.h  base58.cpp  base58.h  hash.cpp  hash.h  uint256.cpp  uint256.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  glibcxx_sanity.cpp  sanity.h  strnlen.cpp
src/config/: celllink-config.h  celllink-config.h.in  magnachain-config.h  magnachain-config.h.in
src/consensus/: consensus.cpp  consensus.h  merkle.cpp  merkle.h  params.h  tx_verify.cpp  tx_verify.h  validation.h
src/crypto/: aes.cpp  aes.h  chacha20.cpp  chacha20.h  common.h  hmac_sha256.cpp  hmac_sha256.h  hmac_sha512.cpp  hmac_sha512.h  ripemd160.cpp  ripemd160.h  sha1.cpp  sha1.h  sha256.cpp  sha256.h  sha256_sse4.cpp  sha512.cpp  sha512.h
src/io/: core_io.h  core_read.cpp  core_write.cpp  dbwrapper.cpp  dbwrapper.h  fs.cpp  fs.h  serialize.h  streams.h
src/key/: key.cpp  key.h  keystore.cpp  keystore.h  pubkey.cpp  pubkey.h
src/leveldb/: .gitignore  leveldb.sln  leveldb.vcxproj  leveldb.vcxproj.filters  packages.config
src/lua/: Makefile  Makefile_static  lapi.c  lbaselib.c  ldebug.c  ldo.c  ldo.h  ldump.c  lgc.c  linit.c  llex.c  llimits.h  lmem.c  lobject.c  lstate.c  lstate.h  lstring.c  lstrlib.c  ltable.c  ltablib.c  lua.c  lua.h  lua_cmsgpack.c  luaconf.h  lundump.c  lvm.c  lvm.h  lzio.h
src/mining/: miner.cpp  miner.h  mining.cpp  mining.h
src/misc/: amount.h  clientversion.cpp  clientversion.h  core_memusage.h  cuckoocache.h  indirectmap.h  limitedmap.h  memusage.h  pow.cpp  pow.h  prevector.h  random.cpp  random.h  rest.cpp  reverse_iterator.h  reverselock.h  timedata.cpp  timedata.h  tinyformat.h  version.h  versionbits.cpp  versionbits.h  warnings.cpp  warnings.h
src/monitor/: database.cpp  database.h  monitorinit.cpp  monitorinit.h  net_processing.cpp  net_processing.h  sql.h
src/net/: compat.h  net.cpp  net.h  net_processing.cpp  net_processing.h  netaddress.cpp  netaddress.h  netbase.cpp  netbase.h  netmessagemaker.h  protocol.cpp  protocol.h  torcontrol.cpp  torcontrol.h
src/policy/: feerate.cpp  feerate.h  fees.cpp  fees.h  policy.cpp  policy.h  rbf.cpp  rbf.h
src/primitives/: block.cpp  block.h  transaction.cpp  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.cpp  bantablemodel.h  callback.h  celllink.cpp  celllink.qrc  celllink_locale.qrc  celllinkaddressvalidator.cpp  celllinkaddressvalidator.h  celllinkamountfield.cpp  celllinkamountfield.h  celllinkgui.cpp  celllinkgui.h  celllinkstrings.cpp  celllinkunits.cpp  celllinkunits.h  clientmodel.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.cpp  coincontroltreewidget.h  csvmodelwriter.cpp  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  (+82 more)
src/rpc/: blockchain.cpp  blockchain.h  branchchainrpc.cpp  branchchainrpc.h  client.cpp  client.h  misc.cpp  net.cpp  protocol.cpp  protocol.h  rawtransaction.cpp  register.h  server.cpp  server.h
src/script/: celllinkconsensus.cpp  celllinkconsensus.h  interpreter.cpp  interpreter.h  ismine.cpp  ismine.h  magnachainconsensus.cpp  magnachainconsensus.h  script.cpp  script.h  script_error.cpp  script_error.h  sigcache.cpp  sigcache.h  sign.cpp  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/smartcontract/: contractdb.cpp  contractdb.h  smartcontract.cpp  smartcontract.h
src/support/: cleanse.cpp  cleanse.h  events.h  lockedpool.cpp  lockedpool.h
src/test/: DoS_tests.cpp  Makefile  README.md  addrman_tests.cpp  allocator_tests.cpp  amount_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  blockencodings_tests.cpp  bloom_tests.cpp  branchdb_tests.cpp  bswap_tests.cpp  checkqueue_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  cuckoocache_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  net_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  raii_event_tests.cpp  random_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  (+30 more)
src/thread/: scheduler.cpp  scheduler.h  sync.cpp  sync.h  threadinterrupt.cpp  threadinterrupt.h  threadsafety.h
src/transaction/: blockencodings.cpp  blockencodings.h  bloom.cpp  bloom.h  coins.cpp  coins.h  compressor.cpp  txdb.cpp  (+9 more)
(+1012 files in other folders)
